--- a/src/css/App.css
+++ b/src/css/App.css
@@ -150,7 +150,7 @@
 }
 @media screen and (max-width: 769px) {
   .main-logo {
-    font-size: 7em;
+    font-size: 9em;
     padding  : 20vh 0 20vh 0;
   }
 }
@@ -184,9 +184,11 @@
   padding-bottom: 50px;
 }
 #Projects>header {
-  text-align    : center;
   margin-top    : 0.5em;
   margin-bottom : 1em;
+  margin-left   : auto;
+  margin-right  : auto;
+  padding: 0;
   font-size     : 6em;
   font-style    : italic;
   letter-spacing: 1em;
@@ -196,7 +198,6 @@
   text-align : center;
   font-weight: 500;
   font-size  : 3em;
-  /* font-style : italic; */
   text-transform: uppercase;
   letter-spacing: 0.45em;
 }
