--- a/src/css/style.css
+++ b/src/css/style.css
@@ -504,12 +504,25 @@ article:first-child::first-letter {
 }
 
 .nav .top-menu {
-  padding: 34px 30px;
-  /* background-color: var(--ascent-col); */
+  position        : fixed;
+  top             : 0;
+  left            : -250px;
+  transform       : translateX(50vw);
+  padding         : 20px 40px 30px 30px;
+  width           : 500px;
+  background-color: var(--navbar-col);
+  /* box-shadow      : 0 -10px 10px var(--ascent-col) inset; */
+  border-radius   : 0 0 50px 50px;
+  z-index         : 1;
+  transition: 0.5s;
 }
 @media screen and (max-width: 768px) {
   .nav .top-menu {
-    padding: 28px 1em;
+    padding: 18px 1em;
+    /* border-bottom   : 5px solid var(--ascent-col); */
+    width           : 350px;
+    left            : -175px;
+    border-radius   :  0 0 40px 40px;
   }
 }
 
@@ -566,7 +579,7 @@ article:first-child::first-letter {
 
 .nav ul li a {
   position          : relative;
-  font-size         : 15px;
+  font-size         : 1.8em;
   padding           : 30px 12px;
   color             : var(--UI-inactive-col);
   -webkit-transition: 0.5s;
@@ -579,6 +592,11 @@ article:first-child::first-letter {
   letter-spacing: 3px;
   color         : var(--UI-font-col);
   text-decoration: none;
+}
+@media screen and (max-width: 768px) {
+  .nav ul li a {
+    font-size         : 1.5em;
+  }
 }
 
 .nav ul li.has-dropdown {
