--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,4 +1,8 @@
-@import url(https://fonts.googleapis.com/css?family=Outfit);
+@import url(https://fonts.googleapis.com/css?family=Outfit:300,400,600,700);
+@import url(https://fonts.googleapis.com/css?family=Montserrat+Alternates:300,400,600,700);
+@import url(https://fonts.googleapis.com/css?family=Julius+Sans+One:300,400,600,700);
+@import url(https://fonts.googleapis.com/css?family=Poppins:300,400,600,700);
+
 :root {
         /* Light theme */
   --bg-col            : #C8FFD4;
@@ -120,9 +124,12 @@ body {
   padding       : 25vh 0 25vh 0;
   font-size     : calc(10px + 2vmin);
   color         : rgb(0, 0, 0);
-  font-family   : "Outfit";
-  font-size     : 15em;
+  font-family   : "Montserrat Alternates";
+  font-size     : 14em;
+  font-weight   : 500;
+  text-transform: uppercase;
   letter-spacing: 0.1em;
+  text-indent   : -0.1em;
   transition    : 0.5s;
   text-shadow   : 0px 0px 0px var(--ascent-col-2);
   animation     : slide 3s ease-out infinite;
@@ -152,13 +159,14 @@ body {
   justify-content: center;
   font-size      : calc(10px + 2vmin);
   color          : rgb(0, 0, 0);
-  font-family    : "Outfit";
+  font-family    : "Poppins";
   font-size      : 0.2em;
   transition     : 0.5s;
-  word-spacing   : 2em;
+  word-spacing   : 1em;
   text-indent    : -1em;
+  text-transform: capitalize;
   text-shadow    : 0px 0px rgba(0, 0, 0, 0.7);
-        /* animation   : spacing 5s ease-in-out infinite; */
+  /* animation   : spacing 5s ease-in-out infinite; */
 }
 @keyframes spacing {
   95% {
@@ -168,8 +176,8 @@ body {
 }
 @media screen and (max-width: 769px) {
   .main-logo {
-    font-size     : 9em;
-    padding       : 20vh 0 20vh 0;
+    font-size     : 6.2em;
+    padding       : 30vh 0 20vh 0;
     letter-spacing: 0em;
   }
 }
