--- a/src/css/style.css
+++ b/src/css/style.css
@@ -506,10 +506,10 @@ article:first-child::first-letter {
 .nav .top-menu {
   position        : fixed;
   top             : 0;
-  left            : -250px;
   transform       : translateX(50vw);
-  padding         : 20px 40px 30px 30px;
-  width           : 500px;
+  padding         : 20px 0 30px 0;
+  width           : 400px;
+  left            : -200px;
   background-color: var(--navbar-col);
   box-shadow      : 0 8px 20px rgba(0, 0, 0, 0.226);
   border-radius   : 0 0 50px 50px;
@@ -518,10 +518,10 @@ article:first-child::first-letter {
 }
 @media screen and (max-width: 768px) {
   .nav .top-menu {
-    padding: 18px 1em;
+    padding: 15px 0 18px 0;
     /* border-bottom   : 5px solid var(--ascent-col); */
-    width           : 350px;
-    left            : -175px;
+    width           : 300px;
+    left            : -150px;
     border-radius   :  0 0 40px 40px;
   }
 }
@@ -563,7 +563,7 @@ article:first-child::first-letter {
 
 .nav ul {
   padding: 0;
-  margin : 5px 0 0 0;
+  margin : 0;
 }
 
 .nav ul li {
@@ -1103,7 +1103,6 @@ article:first-child::first-letter {
   width                : 50px;
   height               : 50px;
   display              : table;
-  backdrop-filter      : blur(10px);
   background           : var(--gototop-bg-col);
   color                : var(--UI-font-col);
   text-align           : center;
