--- a/src/css/App.css
+++ b/src/css/App.css
@@ -2,16 +2,36 @@
 @import url(https://fonts.googleapis.com/css?family=Montserrat+Alternates:300,400,600,700);
 @import url(https://fonts.googleapis.com/css?family=Julius+Sans+One:300,400,600,700);
 @import url(https://fonts.googleapis.com/css?family=Poppins:300,400,600,700);
+@import url(https://fonts.googleapis.com/css?family=El+Messiri:300,400,600,700);
 
 :root {
-        /* Light theme */
-  --bg-col            : #C8FFD4;
-  --bg-col2           : #1bdaa127;
+  /* Light theme */
+
+  --bg-col            : #ffcbad;
+  --bg-col2           : #f5ad95;
   --bg-col3           : rgb(255, 232, 208);
-  --navbar-col        : #1bdaa0;
-  --ascent-col        : #14C38E;
-  --ascent-col-2      : #000000ca;
+  --ascent-col        : #D3756B;
+  --navbar-col        : #D3756B;
   --hamburger-menu-col: #ffd8a963;
+  --shadow-alpha      : rgba(0, 0, 0, 0.45);
+  --shadow-alpha-2    : rgba(0, 0, 0, 0.55);
+  --font-col          : rgb(46, 46, 46);
+  --font-col2         : rgb(61, 61, 61);
+  --font-weight       : 500;
+  --selection-col     : rgb(255, 255, 255);
+  --h-style-col       : rgb(20, 20, 20);
+  --UI-font-col       : rgb(0, 0, 0);
+  --UI-inactive-col   : rgba(0, 0, 0, 0.3);
+  --UI-border-col     : rgba(0, 0, 0, 0.05);
+  --gototop-bg-col    : rgba(255, 197, 126, 0.2);
+
+
+  --bg-col            : #C8FFD4;
+  --bg-col2           : #77ffd627;
+  --bg-col3           : rgb(255, 232, 208);
+  --ascent-col        : #14C38E;
+  --navbar-col        : #1bdaa1da;
+  --ascent-col-2      : #000000ca;
   --shadow-alpha      : rgba(0, 0, 0, 0.45);
   --shadow-alpha-2    : rgba(0, 0, 0, 0.55);
   --font-col          : rgb(46, 46, 46);
@@ -23,10 +43,9 @@
   --UI-inactive-col   : #2b7e65;
   --UI-border-col     : rgba(0, 0, 0, 0.05);
   --gototop-bg-col    : rgba(255, 197, 126, 0.2);
-  --theme-icon        : "\ea04";
 }
 .dark-mode {
-        /* Dark theme */
+  /* Dark theme */
   --bg-col            : rgb(30, 32, 65);
   --bg-col2           : rgb(40, 43, 78);
   --bg-col3           : rgb(44, 47, 85);
@@ -104,8 +123,9 @@ body {
 }
 #Home {
   background-image   : url(../images/Portrait.svg);
+  /* overflow           : visible; */
   transform          : translate3d( 0, 4vw,0 );
-  background-size    : cover;
+  background-size    : contain;
   background-position: center center;
   background-repeat  : no-repeat;
 }
@@ -115,6 +135,7 @@ body {
   }
   #Home {
     transform: translate3d( 0, 8vh,0 );
+    background-size    : cover;
   }
 }
 .main-logo {
@@ -206,14 +227,16 @@ body {
 }
 
 #Projects>div, #About>div {
-  padding         : 50px;
-  border-top      : 7px solid var(--ascent-col);
-  border-bottom   : 7px solid var(--ascent-col);
-  border-radius   : 50px;
-  padding-bottom  : 50px;
-  background-color: var(--bg-col2);
-  box-shadow      : 0 0 25px rgba(0, 0, 0, 0.226);
-  margin-bottom   : 5em;
+  padding                : 50px;
+  border-top             : 7px solid var(--ascent-col);
+  border-bottom          : 7px solid var(--ascent-col);
+  border-radius          : 50px;
+  padding-bottom         : 50px;
+  background-color       : var(--bg-col2);
+  box-shadow             : 0 0 25px rgba(0, 0, 0, 0.226);
+  margin-bottom          : 5em;
+  backdrop-filter        : blur(7px);
+  -webkit-backdrop-filter: blur(7px);
 }
 #Projects>header, #About>header {
   margin-top    : 0.5em;
