--- a/src/css/App.css
+++ b/src/css/App.css
@@ -6,7 +6,6 @@
 
 :root {
   /* Light theme */
-
   --bg-col            : #ffcbad;
   --bg-col2           : #f5ad95;
   --bg-col3           : rgb(255, 232, 208);
@@ -30,7 +29,7 @@
   --bg-col2           : #77ffd627;
   --bg-col3           : rgb(255, 232, 208);
   --ascent-col        : #14C38E;
-  --navbar-col        : #1bdaa1da;
+  --navbar-col        : #1bdaa1;
   --ascent-col-2      : #000000ca;
   --shadow-alpha      : rgba(0, 0, 0, 0.45);
   --shadow-alpha-2    : rgba(0, 0, 0, 0.55);
@@ -82,6 +81,7 @@ body {
   background-color   : var(--bg-col);
   justify-content    : center;
 }
+
 .clearfix::after {
   content: "";
   clear  : both;
@@ -226,7 +226,7 @@ body {
   border-radius: 50px;
 }
 
-#Projects>div, #About>div {
+#Projects>div {
   padding                : 50px;
   border-top             : 7px solid var(--ascent-col);
   border-bottom          : 7px solid var(--ascent-col);
@@ -258,10 +258,20 @@ body {
   text-indent   : 0.45em;
 }
 #Projects p, #About p {
-  text-align : center;
+  text-align : left;
   font-size  : 2em;
-  margin     : 50px 50px;
+  margin     : 20px 20px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-weight: 500;
+}
+
+#Projects a {
+  text-decoration: none;
+  color: var(--ascent-col);
+}
+#Projects a:hover {
+  text-decoration: none;
+  color: var(--UI-font-col);
 }
 
 .float-right { float: right; }
@@ -272,7 +282,22 @@ body {
   width          : 80%;
   box-shadow     : 0px 0px 35px rgba(0, 0, 0, 0.623);
   border-radius  : 25px;
-  margin         : 50px 0 0 0;
+  margin         : 30px 0 30px 0;
+  /* border        : 5px solid var(--ascent-col); */
+}
+#About {
+  padding                : 50px;
+  /* border-top             : 7px solid var(--ascent-col); */
+  /* border-bottom          : 7px solid var(--ascent-col); */
+  border-radius          : 50px;
+  padding-bottom         : 50px;
+  background-color       : var(--bg-col2);
+  box-shadow             : 0 0 25px rgba(0, 0, 0, 0.226);
+  margin-bottom          : 5em;
+  margin-left            : 10em;
+  margin-right           : 10em;
+  backdrop-filter        : blur(7px);
+  -webkit-backdrop-filter: blur(7px);
 }
 @media screen and (max-width: 769px) {
   
@@ -293,9 +318,8 @@ body {
     font-size     : 1.8em;
   }
   #Projects p, #About p {
-    text-align: center;
     font-size : 1.5em;
-    margin    : 15px;
+    margin    : 15px 30px;
   }
   #Projects img, #About img {
     width : 95%;
@@ -303,6 +327,12 @@ body {
   }
   #Projects img, video, #About img, video{
     margin: 10px 0 0 0;
+  }
+
+  #About {
+    margin-left : 1em;
+    margin-right: 1em;
+    padding     : 10px;
   }
 }
 
@@ -330,4 +360,17 @@ body {
 
 .slider-container img:first-child.fade-out {
   opacity: 0;
+}
+
+.icon-instagram
+{
+  content: url(../images/instagram-svgrepo-com.svg);
+  fill: var(--ascent-col);
+  scale: 0.05;
+}
+.icon-twitter
+{
+  content: url(../images/twitter-svgrepo-com.svg);
+  fill: var(--ascent-col);
+  scale: 0.05;
 }
