--- a/src/css/style.css
+++ b/src/css/style.css
@@ -507,7 +507,7 @@ article:first-child::first-letter {
   position        : fixed;
   top             : 0;
   transform       : translateX(50vw);
-  padding         : 20px 0 30px 0;
+  padding         : 20px 0;
   width           : 400px;
   left            : -200px;
   background-color: var(--ascent-col);
@@ -518,8 +518,7 @@ article:first-child::first-letter {
 }
 @media screen and (max-width: 768px) {
   .nav .top-menu {
-    padding: 15px 0 18px 0;
-    /* border-bottom   : 5px solid var(--ascent-col); */
+    padding: 15px 0;
     width           : 300px;
     left            : -150px;
     border-radius   :  0 0 40px 40px;
